--- a/package.json
+++ b/package.json
@@ -1,34 +1,40 @@
 {
-  "name": "moviecinema",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
+  "name": "react-movie-app",
+  "version": "0.1.0",
+  "private": true,
+  "homepage": "http://ayushkul.github.io/react-movie-app",
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "1.18.2",
-    "@react-navigation/bottom-tabs": "^6.5.8",
-    "@react-navigation/native": "^6.1.7",
-    "@react-navigation/native-stack": "^6.9.13",
-    "@tanstack/react-query": "^4.35.3",
-    "axios": "^1.5.0",
-    "expo": "~49.0.11",
-    "expo-linear-gradient": "~12.3.0",
-    "expo-status-bar": "~1.6.0",
-    "lodash": "^4.17.21",
-    "nativewind": "^2.0.11",
-    "react": "18.2.0",
-    "react-native": "0.72.4",
-    "react-native-heroicons": "^3.2.0",
-    "react-native-snap-carousel": "^4.0.0-beta.6",
-    "tailwindcss": "^3.3.2"
+    "axios": "^0.21.1",
+    "gh-pages": "^3.2.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
+    "styled-components": "^5.3.0"
   },
-  "devDependencies": {
-    "@babel/core": "^7.20.0"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
-  "private": true
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
